Small fixes of buttons on about:certerror and .noScriptInfo
Closes #6317

- Removed a div from certerror.js
- Set margin:.2em and font-size:14px to buttons inside .buttons on about:certerror
- Added 5px margin-bottom to .truncate inside .dialogInner of .noScriptInfo

Auditors: @bsclifton @bradleyrichter

Test Plan 1
1. Open https://expired.badssl.com/
2. Make sure the buttons have margins

Test Plan 2
1. Open https://jsfiddle.net/
2. Disable JavaScript with the shield
3. Click the NoScript icon
4. Make sure the text has margin-bottom

--- a/less/about/error.less
+++ b/less/about/error.less
@@ -20,6 +20,18 @@
         padding-bottom: 1rem;
       }
 
+      .buttons {
+        display: flex;
+        flex-flow: row wrap;
+        position: relative;
+        right: .2em; // cancel margin: .2em to align .buttons and .certErrorText
+
+        > .browserButton {
+          margin: .2em;
+          font-size: 14px;
+        }
+      }
+
       .errorLogo {
         margin-bottom: 2rem;
 
